--- a/styles.css
+++ b/styles.css
@@ -278,14 +278,14 @@ h1, h2, h3, h4, h5 {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover !important;
-    background: url("assets/png/background-form2.jpg");
+    background: url("assets/png/background-form2.png");
 }
 
 .slide-form-2 {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover !important;
-    background: url("assets/png/background-form3.jpg");
+    background: url("assets/png/background-form3.png");
 }
 
 /*.slide-form-0:before, .slide-form-1:before, .slide-form-2:before {*/
