--- a/styles.css
+++ b/styles.css
@@ -475,7 +475,7 @@ h1, h2, h3, h4, h5 {
 }
 
 .send-button-container {
-    padding: 30px 0;
+    padding: 24px 0;
     display: flex;
     justify-content: center;
 }
@@ -764,6 +764,7 @@ h1, h2, h3, h4, h5 {
     align-items: center;
     z-index: 9999;
     position: relative;
+    /*transition: all 0.3s ease-in;*/
 }
 
 .advertising-block span {
@@ -974,13 +975,13 @@ h1, h2, h3, h4, h5 {
 }
 
 .footer-input {
-    padding: 5px 20px;
+    line-height: 50px;
+    padding: 0 10px;
+    border-radius: 4px;
     border: none;
     min-width: 500px;
-    line-height: 40px;
-    font-size: 22px;
+    font-size: 20px;
     min-height: 45px;
-    border-radius: 40px;
 }
 
 .send-label {
@@ -989,12 +990,12 @@ h1, h2, h3, h4, h5 {
     right: 4px;
     color: #ffffff;
     background: #af0808;
-    border-radius: 33px;
-    padding: 12px 16px;
+    border-radius: 4px;
     font-size: 18px;
-    bottom: 4px;
     text-transform: uppercase;
     transition: 0.3s linear;
+    line-height: 46px;
+    padding: 0 20px;
 }
 
 
@@ -1014,6 +1015,8 @@ h1, h2, h3, h4, h5 {
 
 .float-container {
     position: relative;
+    display: flex;
+    align-items: center;
 }
 
 /*label {*/
@@ -1079,6 +1082,16 @@ h1, h2, h3, h4, h5 {
     justify-content: center;
     width: 100%;
     background: url("assets/png/background-form.jpg");
+}
+
+.form-2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    max-height: 0;
+    overflow: hidden;
+    /*transition: all 0.3s ease-in;*/
 }
 
 
