--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ h1, h2, h3, h4, h5 {
     z-index: -1;
     position: absolute;
     bottom: 6px;
-    right: 124px;
+    right: 110px;
     content: "";
     height: 106px;
     background-color: #ce3e3e;
@@ -651,7 +651,7 @@ h1, h2, h3, h4, h5 {
     /*background-color: #ffb6b3;*/
     position: relative;
     background: url("assets/png/principies-background.jpg");
-    margin-top: 120px;
+    margin-top: 60px;
     /*width: 100vw;*/
     width: 100%;
     background-position: center;
@@ -1258,6 +1258,13 @@ h1, h2, h3, h4, h5 {
     min-height: 500px !important;
 }
 
+.your-class .slick-track{
+    padding-bottom: 30px;
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+}
+
 /*MEDIA REQUEST*/
 @media (max-width: 1100px) {
     .calc-form {
@@ -1342,10 +1349,10 @@ h1, h2, h3, h4, h5 {
 @media (max-width: 1000px) {
 
 
-    .slick-list {
-        /*min-height: 500px !important;*/
-        padding-bottom: 40px !important;
-    }
+    /*.slick-list {*/
+    /*    !*min-height: 500px !important;*!*/
+    /*    padding-bottom: 40px !important;*/
+    /*}*/
 
     .welcome-header:after {
         display: none;
@@ -1418,16 +1425,11 @@ h1, h2, h3, h4, h5 {
     }
 
     .slide-item img {
-        width: 120%;
+        width: 100%;
     }
 
     .keyses-container {
         padding-top: 60px;
-    }
-
-    .keyses-images img {
-        width: 80%;
-        height: auto !important;
     }
 
     .image-text {
@@ -1478,20 +1480,20 @@ h1, h2, h3, h4, h5 {
         position: relative;
         right: 0;
     }
-}
 
-.cycle {
-    background-image: url(assets/team.jpg);
-    height: 1020px;
-    width: 100vw;
-    cursor: move;
-}
-
-@keyframes animatedBackground {
-    from {
-        background-position: 0 0;
+    .right-part-footer div{
+        width: inherit !important;
     }
-    to {
-        background-position: 100% 0;
+}
+
+
+@media (max-width: 600px) {
+    .keyses-images img {
+        width: 80%;
+        height: auto !important;
+    }
+
+    .right-part-footer div{
+        width: 300px !important;
     }
 }
